# mcp-oauth-server

./: .dockerignore  .env.example  .gitignore  Configuration.md  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg  test.sh  venv-activate-build.sh
.github/workflows/: ci.yml
examples/: 01_simple_tools.py  02_external_api.py  03_postgres_storage.py  04_custom_cookie_auth.py
mcp_oauth_server/: __init__.py  auth.py  cli.py  config.py  cookie_auth.py  db.py  http_server.py  mcp_server.py  oauth_flow.py  session_store.py  storage.py
mcp_oauth_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_auth.py  test_cli.py  test_config.py  test_config_env_vars.py  test_cookie_auth.py  test_http_server.py  test_http_server_extended.py  test_mcp_server.py  test_oauth_flow.py  test_session_store.py  test_storage_backend.py
tests/e2e/: health_probe.py
