[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_oauth_server"
version = "0.1.0"
description = "A generic implementation of a Model Context Protocol (MCP) server with built-in OAuth 2.0 support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dmytro Nikolayev", email = "dnikolayev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp==1.24.0",
    "sanic==25.3.0",
    "click==8.3.1",
    "aiohttp==3.13.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "uvloop; sys_platform != 'win32'",
    "PyYAML==6.0.3",
    "redis==7.1.0",
    "sqlalchemy[asyncio]",
    "asyncpg"
]

[project.optional-dependencies]
dev = [
    "aioresponses==0.7.8",
    "sanic-testing",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "flake8",
    "isort",
    "pylint"
]

[project.scripts]
mcp-oauth-server = "mcp_oauth_server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
